--- a/BackendApplication/.gitignore
+++ b/BackendApplication/.gitignore
@@ -11,6 +11,7 @@ HELP.md
 .springBeans
 .sts4-cache
 *.properties
+.DS_Store
 
 ### IntelliJ IDEA ###
 .idea
@@ -25,3 +26,5 @@ HELP.md
 /nbdist/
 /.nb-gradle/
 /build/
+/.idea/
+
